# mtls-vending-machine

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  config.py  main.py  pyproject.toml  run_e2e.sh
.github/workflows/: docker-publish.yml  e2e.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: vending.spec.ts
frontend/patches/: node-forge+1.4.0.patch
frontend/src/: main.ts  oids.ts  vending.test.ts  vending.ts
templates/: index.html
tests/: test_backend.py  verify_p12.sh
