[project]
name = "mtls-vending-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
